# sqtab

./: .env.example  .gitignore  CHANGELOG.md  README.md  __init__.py  cli.py  db.py  exporter.py  importer.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
sqtab/: ai_sql.py  analyzer.py  cli.py  exporter.py  importer.py  prompt_utils.py
sqtab/prompts/: default.md
tests/: test_export_csv.py  test_import_csv.py
tests/samples/: sample.csv  sample.json
